Add description links

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-linkify": "^1.0.0",
     "@types/react-router": "^5.1.12",
     "@types/react-router-dom": "^5.1.7",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-linkify": "^1.0.0-alpha",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
